[gd_scene load_steps=24 format=3 uid="uid://cs30fdktbayf1"]

[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_10.tres" id="1"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_21.tres" id="2"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_25.tres" id="3"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_5.tres" id="4"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_24.tres" id="5"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_23.tres" id="6"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_22.tres" id="7"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_26.tres" id="8"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_4.tres" id="9"]
[ext_resource type="Texture2D" path="res://example/graphics/symbol_icons/stats/stat_icons/stat_icons_15.tres" id="10"]
[ext_resource type="Resource" uid="uid://8aroi58f1m7q" path="res://example/wyvernbox/equip_bonuses/defense.tres" id="11"]
[ext_resource type="Resource" uid="uid://ceekyscfqxmct" path="res://example/wyvernbox/equip_bonuses/dodgerate.tres" id="12"]
[ext_resource type="Resource" uid="uid://ow3ooxrppuja" path="res://example/wyvernbox/equip_bonuses/weapon_to_lightning.tres" id="13"]
[ext_resource type="Resource" uid="uid://ctado0tbv8u75" path="res://example/wyvernbox/equip_bonuses/spell_damage.tres" id="14"]
[ext_resource type="Resource" uid="uid://bbpa5pcdc3t82" path="res://example/wyvernbox/equip_bonuses/weapon_damage.tres" id="15"]
[ext_resource type="Resource" uid="uid://eo1p2kljsv6n" path="res://example/wyvernbox/equip_bonuses/weapon_to_ice.tres" id="16"]
[ext_resource type="Resource" uid="uid://jsi7l5ly6yfq" path="res://example/wyvernbox/equip_bonuses/weapon_to_dark.tres" id="17"]
[ext_resource type="Resource" uid="uid://c78dtcec4la61" path="res://example/wyvernbox/equip_bonuses/weapon_to_fire.tres" id="18"]
[ext_resource type="PackedScene" uid="uid://buk5dqg0uoud3" path="res://addons/wyvernbox_prefabs/equip_bonus_view.tscn" id="19"]
[ext_resource type="FontFile" path="res://example/theme/font/font_title.tres" id="20"]
[ext_resource type="FontFile" path="res://example/theme/font/font_body.tres" id="21"]
[ext_resource type="FontFile" path="res://example/theme/font/font_numbers.tres" id="22"]
[ext_resource type="Script" path="res://example/src/menu_tabs/equip_bonus_list.gd" id="23"]

[node name="StatsDisplay" type="VBoxContainer"]
offset_right = 225.0
offset_bottom = 202.0
size_flags_horizontal = 3
script = ExtResource("23")
equip_inventory_view = NodePath("../..")

[node name="Hpmp" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Hp" type="HBoxContainer" parent="Hpmp"]
layout_mode = 2

[node name="Label2" type="Label" parent="Hpmp/Hp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20")
text = "Health"

[node name="Control" type="Control" parent="Hpmp/Hp"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Hpmp/Hp"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("1")
expand_mode = 1

[node name="Num" type="Label" parent="Hpmp/Hp"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("20")
text = "1000/1000"

[node name="ColorRect" type="ColorRect" parent="Hpmp/Hp/Num"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 0, 0, 1)

[node name="Mp" type="HBoxContainer" parent="Hpmp"]
layout_mode = 2

[node name="Label2" type="Label" parent="Hpmp/Mp"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20")
text = "Magic Energy"

[node name="Control" type="Control" parent="Hpmp/Mp"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="Hpmp/Mp"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
texture = ExtResource("10")
expand_mode = 1

[node name="Num" type="Label" parent="Hpmp/Mp"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("20")
text = "1000/1000"

[node name="ColorRect2" type="ColorRect" parent="Hpmp/Mp/Num"]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.219608, 0.505882, 1, 1)

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="WeaponName" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("20")
text = "Dope Hammer of Asskickering"

[node name="Weapon" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="B" type="VBoxContainer" parent="Weapon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_constants/separation = 0
alignment = 1

[node name="Control" type="Control" parent="Weapon/B"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Dmg" type="HBoxContainer" parent="Weapon/B"]
layout_mode = 2

[node name="Label" type="Label" parent="Weapon/B/Dmg"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("21")
text = "Damage Per Second:"

[node name="Value" type="Label" parent="Weapon/B/Dmg"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("22")
text = "4.0"

[node name="Crit" type="HBoxContainer" parent="Weapon/B"]
layout_mode = 2

[node name="Label" type="Label" parent="Weapon/B/Crit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("21")
text = "Chance for x2 damage:"

[node name="Value" type="Label" parent="Weapon/B/Crit"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("22")
text = "100%"

[node name="Control2" type="Control" parent="Weapon"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="F" parent="Weapon" instance=ExtResource("19")]
visible = false
layout_mode = 2
shown_res = ExtResource("18")

[node name="Icon" parent="Weapon/F" index="1"]
texture = ExtResource("5")

[node name="L" parent="Weapon" instance=ExtResource("19")]
visible = false
layout_mode = 2
shown_res = ExtResource("13")

[node name="Icon" parent="Weapon/L" index="1"]
texture = ExtResource("8")

[node name="I" parent="Weapon" instance=ExtResource("19")]
visible = false
layout_mode = 2
shown_res = ExtResource("16")

[node name="Icon" parent="Weapon/I" index="1"]
texture = ExtResource("3")

[node name="D" parent="Weapon" instance=ExtResource("19")]
visible = false
layout_mode = 2
shown_res = ExtResource("17")

[node name="Icon" parent="Weapon/D" index="1"]
texture = ExtResource("6")

[node name="OffDef" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Off" type="VBoxContainer" parent="OffDef"]
layout_mode = 2

[node name="Label2" type="Label" parent="OffDef/Off"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20")
text = "Offensive"

[node name="HBoxContainer" type="HBoxContainer" parent="OffDef/Off"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="W" parent="OffDef/Off/HBoxContainer" instance=ExtResource("19")]
layout_mode = 2
shown_res = ExtResource("15")

[node name="Icon" parent="OffDef/Off/HBoxContainer/W" index="1"]
texture = ExtResource("7")

[node name="S" parent="OffDef/Off/HBoxContainer" instance=ExtResource("19")]
layout_mode = 2
shown_res = ExtResource("14")

[node name="Icon" parent="OffDef/Off/HBoxContainer/S" index="1"]
texture = ExtResource("2")

[node name="VSeparator" type="VSeparator" parent="OffDef"]
layout_mode = 2

[node name="Def" type="VBoxContainer" parent="OffDef"]
layout_mode = 2

[node name="Label2" type="Label" parent="OffDef/Def"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20")
text = "Defensive"

[node name="HBoxContainer" type="HBoxContainer" parent="OffDef/Def"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Def" parent="OffDef/Def/HBoxContainer" instance=ExtResource("19")]
layout_mode = 2
shown_res = ExtResource("11")

[node name="Icon" parent="OffDef/Def/HBoxContainer/Def" index="1"]
texture = ExtResource("9")

[node name="Dodge" parent="OffDef/Def/HBoxContainer" instance=ExtResource("19")]
layout_mode = 2
shown_res = ExtResource("12")

[node name="Icon" parent="OffDef/Def/HBoxContainer/Dodge" index="1"]
texture = ExtResource("4")

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="OtherStats" type="RichTextLabel" parent="."]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[editable path="Weapon/F"]
[editable path="Weapon/L"]
[editable path="Weapon/I"]
[editable path="Weapon/D"]
[editable path="OffDef/Off/HBoxContainer/W"]
[editable path="OffDef/Off/HBoxContainer/S"]
[editable path="OffDef/Def/HBoxContainer/Def"]
[editable path="OffDef/Def/HBoxContainer/Dodge"]
